# collatz-proof-work

./: .gitignore  CollatzConjecture_working.ipynb  EDITORIAL_REVIEW_2026-04-28.md  LICENSE  LICENSE-CODE  LICENSE-DOCS  README.md  RESEARCH_AUDIT_2026-04-28.md  changelog.md  iteration_077_diophantine_handoff_DESIGN.md  program.md  score_proof_state.py
certificates/: iteration_068_certificate_K6.json  iteration_068_certificate_K8.json
cycle_exclusion_engine/: .gitignore  Makefile  NOTE_periodic_word_engine.md  README.md  README_cycle_engine.md
cycle_exclusion_engine/rust/: Cargo.toml
cycle_exclusion_engine/rust/src/: affine.rs  affine_periodic.rs  canonical.rs  canonical_periodic.rs  lib.rs  main.rs  ndjson_periodic.rs  parity.rs  periodic.rs  record.rs  writer.rs
cycle_exclusion_engine/rust/tests/: sanity.rs
docs/: ARTIFACTS.md
experiments/: iteration_060c.py  iteration_060d_filter_artifact_selfloops.py  iteration_061_3window.py  iteration_062_classify_witnesses.py  iteration_063_artifact_cegis.py  iteration_064_positivity_theorem.py  iteration_065_artifact_family_analysis.py  iteration_066_positivity_fuel.py  iteration_067_eta_fuel_thresholds.py  iteration_068_fixed_lambda_lp.py  iteration_069_audit.py  iteration_070_cycle_negativity.py  iteration_071a_dual_decomposition.py  iteration_071b_realized_trajectory.py
proof_states/: iteration_060c_K6.json  iteration_060c_K8.json  iteration_060d_K6.json  iteration_060d_K8.json  iteration_061_3window_K8.json  iteration_061_3window_K8_S10M.json  iteration_061_3window_K8_S10M_v2_witness.json  (+23 more)
(+26 files in other folders)
