[package]
name = "cee_rust"
version = "0.1.0"
edition = "2021"
description = "Cycle Exclusion Engine -- parity block generator + affine composer + canonical reducer"
license = "MIT OR Apache-2.0"

[lib]
name = "cee_rust"
path = "src/lib.rs"

[[bin]]
name = "cee_generate"
path = "src/main.rs"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
